--- a/tox.ini
+++ b/tox.ini
@@ -13,13 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-
-import os
-from unittest import TestCase
-
-import tests
-
-
-class TestBase(TestCase):
-
-    TESTS_PATH = os.path.dirname(os.path.abspath(tests.__file__))
+[testenv]
+passenv = *
+deps = -rrequirements.txt
+commands = nosetests -x --tests tests.unit --with-coverage --cover-package=airflow_pentaho --cover-html --cover-xml --cover-xml-file=unit-coverage.xml --with-xunit --xunit-file=xunit.xml -s -v --logging-level=DEBUG --logging-clear-handlers
