--- a/tox.ini
+++ b/tox.ini
@@ -16,4 +16,5 @@
 [testenv]
 passenv = *
 deps = -rrequirements.txt
-commands = nosetests -x --tests tests.unit --with-coverage --cover-package=airflow_pentaho --cover-html --cover-xml --cover-xml-file=unit-coverage.xml --with-xunit --xunit-file=xunit.xml -s -v --logging-level=DEBUG --logging-clear-handlers
+commands = flake8
+           nosetests -x --tests tests.unit --with-coverage --cover-package=airflow_pentaho --cover-html --cover-xml --cover-xml-file=unit-coverage.xml --with-xunit --xunit-file=xunit.xml -s -v --logging-level=DEBUG --logging-clear-handlers
