--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 language: python
 
 python:
-  - "3.6"
+  - "3.7"
 
 install:
   - pip install -r requirements.txt
+  - pip install pre-commit
   - airflow db init
 
 script:
-  - tox
+  - pre-commit run --all-files
 
 deploy:
   provider: pypi
