--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,6 @@
 
 [testenv]
 passenv = *
-deps = -rrequirements.txt
-commands = flake8
-           nosetests -x --tests tests.unit --with-coverage --cover-package=airflow_pentaho --cover-html --cover-xml --cover-xml-file=unit-coverage.xml --with-xunit --xunit-file=xunit.xml -s -v --logging-level=DEBUG --logging-clear-handlers
+deps = -r requirements.txt
+commands = pytest --cov=polaris tests
+    #nosetests -x --tests tests.unit --with-coverage --cover-package=airflow_pentaho --cover-html --cover-xml --cover-xml-file=unit-coverage.xml --with-xunit --xunit-file=xunit.xml -s -v --logging-level=DEBUG --logging-clear-handlers
