--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,7 +23,7 @@ repos:
     -   id: flake8
         additional_dependencies: [flake8-typing-imports==1.9.0]
 -   repo: https://github.com/pre-commit/mirrors-pylint
-    rev: ''  # Use the sha / tag you want to point at
+    rev: 'v2.6.0'
     hooks:
     -   id: pylint
         exclude: tests
