--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ apache-airflow==2.0.1
 apache-airflow-providers-sqlite==1.0.2
 xmltodict
 sqlalchemy<1.4,>=1.3.18
+setuptools-git-version
 
 # dev
 pytest
