--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   - export PYTHON_VERSION="$(python --version | cut -d " " -f 2 | cut -d "." -f 1-2)"
   - export CONSTRAINT_URL="https://raw.githubusercontent.com/apache/airflow/constraints-${AIRFLOW_VERSION}/constraints-${PYTHON_VERSION}.txt"
   - pip install "apache-airflow==${AIRFLOW_VERSION}" --constraint "${CONSTRAINT_URL}"
+  - pip install -r requirements.txt
   - pip install pre-commit
   - airflow db init
 
