--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -33,6 +33,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install build
         pip install -r requirements.txt
+        pip install .
     - name: Build package
       run: python -m build
     - name: Publish package
